--- a/package.json
+++ b/package.json
@@ -12,22 +12,26 @@
 		"@floating-ui/react-dom": "^2.1.2",
 		"@mdx-js/loader": "^3.1.0",
 		"@next/mdx": "^14.2.18",
+		"@react-three/fiber": "^8.17.10",
 		"classnames": "^2.5.1",
 		"cookie": "^1.0.1",
 		"gray-matter": "^4.0.3",
+		"install": "^0.13.0",
 		"next": "^14.2.18",
 		"next-intl": "^3.25.1",
 		"next-mdx-remote": "^5.0.0",
 		"postcss": "^8.4.49",
 		"postcss-preset-env": "^9.6.0",
 		"react": "^18.3.1",
+		"react-3d-icons": "^1.0.2",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0",
 		"react-masonry-css": "^1.0.16",
 		"remark": "^15.0.1",
 		"remark-html": "^16.0.1",
 		"sass": "^1.81.0",
-		"sharp": "^0.33.5"
+		"sharp": "^0.33.5",
+		"three": "^0.170.0"
 	},
 	"devDependencies": {
 		"@csstools/postcss-global-data": "^2.1.1",
