--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@types/node": "^20.17.6",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
+		"eslint": "^9.15.0",
 		"postcss-custom-media": "^10.0.8",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"typescript": "^5.6.3"
